--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>hello</h1>
     <h1>Oh hi there</h1>
+    <p id="demo"></p>
     <script src="index.js"></script>
   </body>
 </html>
