Starting fresh with html and css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello</h1>
-    <h1>Oh hi there</h1>
+    <h1>Generate a random password</h1>
+    <p>Never use an insecure password again.</p>
+
     <p id="demo"></p>
     <script src="index.js"></script>
   </body>
