Polishing css and html. added js

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         </h1>
         <p>Never use an insecure password again.</p>
       </header>
+      <button id="demo">Generate password</button> <br />
       <div class="line"></div>
-      <button id="demo">Generate password</button>
+      <input type="password" id="" name="" />
+      <input type="password" id="" name="" />
     </div>
     <script src="index.js"></script>
   </body>
