--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       </header>
       <button id="demo">Generate password</button> <br />
       <div class="line"></div>
-      <input type="password" id="" name="" />
-      <input type="password" id="" name="" />
+      <div class="passwordField">
+        <input type="password" id="" name="" />
+        <input type="password" id="" name="" />
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
