Remaking the js file with help

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </h1>
         <p>Never use an insecure password again.</p>
       </header>
-      <button id="demo">Generate password</button> <br />
+      <button onclick="myFunction" id="demo">Generate password</button> <br />
       <div class="line"></div>
       <div class="passwordField">
         <input type="password" id="" name="" />
