--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <button onclick="myFunction" id="demo">Generate password</button> <br />
       <div class="line"></div>
       <div class="passwordField">
-        <input type="password" id="" name="" />
-        <input type="password" id="" name="" />
+        <input type="password" id="rndmPW" name="" />
+        <input type="password" id="rndmPW" name="" />
       </div>
     </div>
     <script src="index.js"></script>
