struggling with  js

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         </h1>
         <p>Never use an insecure password again.</p>
       </header>
-      <button onclick="myFunction" id="demo">Generate password</button> <br />
+      <button onclick="generatePasswords" id="btnPw">Generate password</button>
+      <br />
       <div class="line"></div>
       <div class="passwordField">
-        <input type="password" id="rndmPW" name="" />
-        <input type="password" id="rndmPW" name="" />
+        <input type="password" id="rndmPWone" name="" />
+        <input type="password" id="rndmPWtwo" name="" />
       </div>
     </div>
     <script src="index.js"></script>
