Struggling with js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </h1>
         <p>Never use an insecure password again.</p>
       </header>
-      <button onclick="generatePasswords" id="btnPw">Generate password</button>
+      <button onclick="generateRandomPassword">Generate password</button>
       <br />
       <div class="line"></div>
       <div class="passwordField">
