--- a/index.html
+++ b/index.html
@@ -4,33 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Karla:wght@800&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
-
+    <script src="index.js" defer></script>
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <header class="text1">
+      <div class="textContainer">
         <h1>
           Generate a <br />
-          <span style="color: var(--green)">random password</span>
+          random password.
         </h1>
-        <p>Never use an insecure password again.</p>
-      </header>
-      <button onclick="generateRandomPassword">Generate password</button>
-      <br />
-      <div class="line"></div>
-      <div class="passwordField">
-        <input type="password" id="rndmPWone" name="" />
-        <input type="password" id="rndmPWtwo" name="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+          Officiis deleniti ducimus unde officia doloremque!
+        </p>
+      </div>
+      <div class="buttonAndPassword">
+        <button onclick="btnDisplayPassword()">Generate Password</button>
+        <input type="text" id="genRndmPw" placeholder="random password" />
       </div>
     </div>
-    <script src="index.js"></script>
   </body>
 </html>
