changed js from onclick to eventlistener which is professionaly preffered

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
       </div>
       <div class="buttonAndPassword">
-        <button onclick="btnDisplayPassword()">Generate Password</button>
+        <button id="btnDisplayPassword">Generate Password</button>
         <input type="text" id="genRndmPw" placeholder="random password" />
       </div>
     </div>
