changed syntax a bit for better readability

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       </div>
       <div class="buttonAndPassword">
         <button id="btnDisplayPassword">Generate Password</button>
-        <input type="text" id="genRndmPw" placeholder="random password" />
+        <input
+          type="text"
+          id="generate-random-password"
+          placeholder="random password"
+        />
       </div>
     </div>
   </body>
